{
    "version": 1,
    "name": "FrostmaulInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "3968a53a-94d5-4737-9af7-a5eab2100380",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "2b4b7619-37f5-4ed0-a8d3-42e65ee8d7c7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "cf11c9e1-0e92-4270-b036-ae47779a33a7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PreviewHold",
                    "type": "Button",
                    "id": "6513d638-b757-40f7-a40d-51a9565e8812",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Press",
                    "type": "Button",
                    "id": "ed4b263e-5fc6-4900-af74-529709abb155",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DragDelta",
                    "type": "Value",
                    "id": "9a6f7af9-dc99-4708-85d0-77da509a68f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8d16bcf-cc73-4601-b5ff-289529de782e",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fdc727bc-ed71-43a7-bf83-ab4079231dea",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12717a0f-3b51-4d3e-8605-f167efd48407",
                    "path": "<Pointer>/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "PreviewHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7900ef64-9c83-430e-9b26-e278225f1584",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56a8ae80-fd04-4b70-a9bc-80674f7f5c80",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}